Removed Java 9 and 11 calls... Java 8 compatible