@@ -21,6 +21,7 @@ import static rotp.ui.UserPreferences.prefStarsPerEmpire;
 import java.awt.Color;
 import java.io.Serializable;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -627,7 +628,7 @@ public class MOO1GameOptions implements Base, IGameOptions, Serializable {
      * @return the list
      */
     public static List<String> starTypeColors() {
-    	return List.of("RED", "ORANGE", "YELLOW"
+    	return Arrays.asList("RED", "ORANGE", "YELLOW"
     				 , "BLUE", "WHITE", "PURPLE"); 
     }
 
